While writing the full story, made some changes. Made the div a pre tag to maintain the formatting of the text file and avoid complicating things. Added CSS for the pre tag to avoid having to go into word wrapping concepts. Realized I'm dumb and adjectives don't need to be marked as singular in English.

--- a/PhrasalTemplateWordGame/Template/style/style.css
+++ b/PhrasalTemplateWordGame/Template/style/style.css
@@ -2,3 +2,7 @@ body
 {
     font-family: "Courier New", Courier, monospace;
 }
+
+pre {
+    white-space: pre-wrap;
+}
